src/test/ui/rfc-2093-infer-outlives/nested-union.ds
#![feature(dustc_attrs)]
#![feature(untagged_unions)]

#[dustc_outlives]
union Foo<'a, T: Copy> { //~ ERROR dustc_outlives
    field1: Bar<'a, T>
}

// Type U needs to outlive lifetime 'b
union Bar<'b, U: Copy> {
    field2: &'b U
}

fn main() {}
